--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@tanstack/react-query": "^4.29.15",
     "antd": "^5.6.2",
     "react": "^18.2.0",
