--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "base-structure",
   "private": true,
+  "homepage": "https://namds29.github.io/web-dai-hoc-van-hoa",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@tanstack/react-query": "^4.29.15",
     "antd": "^5.6.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
