--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.14.0",
-    "sass": "^1.63.6"
+    "react-tsparticles": "^2.12.2",
+    "sass": "^1.63.6",
+    "tsparticles": "^3.0.3",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
