--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
