--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
+    "@ant-design/icons": "^5.3.1",
     "@tanstack/react-query": "^4.29.15",
-    "antd": "^5.6.2",
+    "antd": "^5.15.2",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,6 +41,7 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "webpack": "^5.90.3"
   }
 }
