--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@tanstack/react-query": "^4.29.15",
+    "@udecode/plate-common": "^31.0.0",
     "antd": "^5.15.2",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.0",
     "react-tsparticles": "^2.12.2",
     "sass": "^1.63.6",
