--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "antd-img-crop": "^4.21.0",
     "axios": "^1.6.8",
     "gh-pages": "^6.1.1",
+    "js-sha256": "^0.11.0",
+    "jwt-decode": "^4.0.0",
+    "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.7",
+    "@types/qs": "^6.9.14",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
