--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -38,9 +38,18 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
+      - name: Upload artifact
+        id: github-pages
+        uses: actions/upload-artifact@v4
+        with:
+          name: "github-pages"
+          path: "dist"
 
     # Deployment job
   deploy:
+   permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
