--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gh-pages": "^6.1.1",
     "js-sha256": "^0.11.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
